infrastructure/oauth2-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2
  namespace: oauth2
spec:
  selector:
    app: oauth2
  ports:
    - port: 4180
      targetPort: 4180
